--- a/week-01/intro-to-neural-networks/Backpropagation-2.ipynb
+++ b/week-01/intro-to-neural-networks/Backpropagation-2.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Backpropagation exercise\n",
     "\n",
@@ -19,7 +22,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -57,7 +62,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -162,7 +169,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -170,9 +179,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:intro-to-neural-networks]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-intro-to-neural-networks-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
