not fully implemented.. don't know why error occurs

--- a/RNN-lesson-01/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
+++ b/RNN-lesson-01/intro-to-rnns/Anna_KaRNNa_Exercises.ipynb
@@ -15,17 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from collections import namedtuple\n",
     "\n",
     "import numpy as np\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "print(tf.__version__)"
    ]
   },
   {
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -60,9 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text[:100]"
    ]
@@ -76,9 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8, 29, 51,  2, 54, 53, 12, 35, 73,  0,  0,  0, 30, 51,  2,  2, 76,\n",
+       "       35, 81, 51, 23, 45, 58, 45, 53, 44, 35, 51, 12, 53, 35, 51, 58, 58,\n",
+       "       35, 51, 58, 45, 24, 53, 27, 35, 53, 16, 53, 12, 76, 35, 22, 52, 29,\n",
+       "       51,  2,  2, 76, 35, 81, 51, 23, 45, 58, 76, 35, 45, 44, 35, 22, 52,\n",
+       "       29, 51,  2,  2, 76, 35, 45, 52, 35, 45, 54, 44, 35, 80, 82, 52,  0,\n",
+       "       82, 51, 76, 21,  0,  0, 74, 16, 53, 12, 76, 54, 29, 45, 52], dtype=int32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded[:100]"
    ]
@@ -92,9 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(vocab)"
    ]
@@ -130,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -142,25 +187,26 @@
     "       \n",
     "       Arguments\n",
     "       ---------\n",
-    "       arr: Array you want to make batches from\n",
+    "       arr: Array you want to make batches from (1-D Array)\n",
     "       n_seqs: Batch size, the number of sequences per batch\n",
     "       n_steps: Number of sequence steps per batch\n",
     "    '''\n",
     "    # Get the batch size and number of batches we can make\n",
-    "    batch_size = \n",
-    "    n_batches = \n",
+    "    batch_size = n_seqs * n_steps # single batch size\n",
+    "    n_batches = len(arr) // batch_size # /: floating division, //: floor division\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    arr = arr[:n_batches * batch_size] # make divisable by batch_size?\n",
     "    \n",
     "    # Reshape into n_seqs rows\n",
-    "    arr = \n",
+    "    arr = arr.reshape((n_seqs, -1)) # -1 will automatically fit the dimension\n",
     "    \n",
     "    for n in range(0, arr.shape[1], n_steps):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:, n:n+n_steps]\n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y = np.zeros_like(x)\n",
+    "        y[:, :-1], y[:, -1] = x[:, 1:], x[:, 0]\n",
     "        yield x, y"
    ]
   },
@@ -173,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -185,9 +231,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[ 8 29 51  2 54 53 12 35 73  0]\n",
+      " [35 51 23 35 52 80 54 35 25 80]\n",
+      " [16 45 52 21  0  0 70  7 53 44]\n",
+      " [52 35 15 22 12 45 52 25 35 29]\n",
+      " [35 45 54 35 45 44 77 35 44 45]\n",
+      " [35 18 54 35 82 51 44  0 80 52]\n",
+      " [29 53 52 35 55 80 23 53 35 81]\n",
+      " [27 35  5 22 54 35 52 80 82 35]\n",
+      " [54 35 45 44 52  1 54 21 35 43]\n",
+      " [35 44 51 45 15 35 54 80 35 29]]\n",
+      "\n",
+      "y\n",
+      " [[29 51  2 54 53 12 35 73  0  0]\n",
+      " [51 23 35 52 80 54 35 25 80 45]\n",
+      " [45 52 21  0  0 70  7 53 44 77]\n",
+      " [35 15 22 12 45 52 25 35 29 45]\n",
+      " [45 54 35 45 44 77 35 44 45 12]\n",
+      " [18 54 35 82 51 44  0 80 52 58]\n",
+      " [53 52 35 55 80 23 53 35 81 80]\n",
+      " [35  5 22 54 35 52 80 82 35 44]\n",
+      " [35 45 44 52  1 54 21 35 43 29]\n",
+      " [44 51 45 15 35 54 80 35 29 53]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -246,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -262,11 +338,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholder(tf.int32, [batch_size, num_steps], name='inputs')\n",
+    "    targets = tf.placeholder(tf.int32, [batch_size, num_steps], name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
@@ -309,13 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def build_lstm(lstm_size, num_layers, batch_size, keep_prob):\n",
+    "def build_lstm(lstm_size, keep_prob):\n",
     "    ''' Build LSTM cell.\n",
     "    \n",
     "        Arguments\n",
@@ -328,14 +404,18 @@
     "    '''\n",
     "    ### Build the LSTM Cell\n",
     "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
     "    \n",
     "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
     "    \n",
+    "    return drop\n",
+    "\n",
+    "def build_lstm_bug_fixed(lstm_size, keep_prob, num_layers, batch_size):\n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    # cell = tf.contrib.rnn.MultiRNNCell([drop] * num_layers)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell( [build_lstm(lstm_size, keep_prob) for _ in range(num_layers)])\n",
+    "    initial_state = cell.zero_state( batch_size, tf.float32 )\n",
     "    \n",
     "    return cell, initial_state"
    ]
@@ -352,14 +432,14 @@
     "\n",
     "We are using the same fully connected layer, the same weights, for each of the outputs. Then, to make things easier, we should reshape the outputs into a 2D tensor with shape $(M * N) \\times L$. That is, one row for each sequence and step, where the values of each row are the output from the LSTM cells. We get the LSTM output as a list, `lstm_output`. First we need to concatenate this whole list into one array with [`tf.concat`](https://www.tensorflow.org/api_docs/python/tf/concat). Then, reshape it (with `tf.reshape`) to size $(M * N) \\times L$.\n",
     "\n",
-    "One we have the outputs reshaped, we can do the matrix multiplication with the weights. We need to wrap the weight and bias variables in a variable scope with `tf.variable_scope(scope_name)` because there are weights being created in the LSTM cells. TensorFlow will throw an error if the weights created here have the same names as the weights created in the LSTM cells, which they will be default. To avoid this, we wrap the variables in a variable scope so we can give them unique names.\n",
+    "Once we have the outputs reshaped, we can do the matrix multiplication with the weights. We need to wrap the weight and bias variables in a variable scope with `tf.variable_scope(scope_name)` because there are weights being created in the LSTM cells. TensorFlow will throw an error if the weights created here have the same names as the weights created in the LSTM cells, which they will be default. To avoid this, we wrap the variables in a variable scope so we can give them unique names.\n",
     "\n",
     "> **Exercise:** Implement the output layer in the function below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -379,22 +459,22 @@
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    seq_output = \n",
+    "    seq_output = tf.concat( lstm_output, axis=1 )\n",
     "    # Reshape seq_output to a 2D tensor with lstm_size columns\n",
-    "    x = \n",
+    "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
     "    # Connect the RNN outputs to a softmax layer\n",
     "    with tf.variable_scope('softmax'):\n",
     "        # Create the weight and bias variables here\n",
-    "        softmax_w = \n",
-    "        softmax_b = \n",
+    "        softmax_w = tf.Variable( tf.truncated_normal( (in_size, out_size), stddev=0.1 ) )\n",
+    "        softmax_b = tf.Variable( tf.zeros(out_size) )\n",
     "    \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
     "    # of rows of logit outputs, one for each step and sequence\n",
-    "    logits = \n",
+    "    logits = tf.matmul( x, softmax_w ) + softmax_b\n",
     "    \n",
     "    # Use softmax to get the probabilities for predicted characters\n",
-    "    out = \n",
+    "    out = tf.nn.softmax(logits=logits, name='predicted_output')\n",
     "    \n",
     "    return out, logits"
    ]
@@ -414,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -433,11 +513,11 @@
     "    '''\n",
     "    \n",
     "    # One-hot encode targets and reshape to match logits, one row per sequence per step\n",
-    "    y_one_hot = \n",
-    "    y_reshaped =  \n",
+    "    y_one_hot = tf.one_hot(targets, num_classes)\n",
+    "    y_reshaped =  tf.reshape(y_one_hot, logits.get_shape())\n",
     "    \n",
     "    # Softmax cross entropy loss\n",
-    "    loss = \n",
+    "    loss = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y_reshaped)\n",
     "    \n",
     "    return loss"
    ]
@@ -453,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -490,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -512,25 +592,26 @@
     "        tf.reset_default_graph()\n",
     "        \n",
     "        # Build the input placeholder tensors\n",
-    "        self.inputs, self.targets, self.keep_prob = \n",
+    "        self.inputs, self.targets, self.keep_prob = build_inputs(batch_size, num_steps)\n",
     "\n",
     "        # Build the LSTM cell\n",
-    "        cell, self.initial_state = \n",
+    "        cell, self.initial_state = build_lstm_bug_fixed(lstm_size, self.keep_prob, num_layers, batch_size)\n",
+    "        #cell, self.initial_state = build_lstm(lstm_size, num_layers, batch_size, self.keep_prob)\n",
     "\n",
     "        ### Run the data through the RNN layers\n",
     "        # First, one-hot encode the input tokens\n",
-    "        x_one_hot = \n",
+    "        x_one_hot = tf.one_hot(self.inputs, num_classes)\n",
     "        \n",
     "        # Run each sequence step through the RNN with tf.nn.dynamic_rnn \n",
-    "        outputs, state =\n",
+    "        outputs, state =tf.nn.dynamic_rnn(cell, x_one_hot, initial_state=self.initial_state)\n",
     "        self.final_state = state\n",
     "        \n",
     "        # Get softmax predictions and logits\n",
-    "        self.prediction, self.logits = \n",
+    "        self.prediction, self.logits = build_output(outputs, lstm_size, num_classes)\n",
     "        \n",
     "        # Loss and optimizer (with gradient clipping)\n",
-    "        self.loss =  \n",
-    "        self.optimizer = "
+    "        self.loss =  build_loss(self.logits, self.targets, lstm_size, num_classes)\n",
+    "        self.optimizer = build_optimizer(self.loss, learning_rate, grad_clip)"
    ]
   },
   {
@@ -581,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -612,11 +693,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported format string passed to numpy.ndarray.__format__",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-ad76a1595262>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m             print('Epoch: {}/{}... '.format(e+1, epochs),\n\u001b[1;32m     34\u001b[0m                   \u001b[0;34m'Training Step: {}... '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m                   \u001b[0;34m'Training loss: {:.4f}... '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m                   '{:.4f} sec/batch'.format((end-start)))\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to numpy.ndarray.__format__"
+     ]
+    }
+   ],
    "source": [
     "epochs = 20\n",
     "# Save every N iterations\n",
@@ -673,7 +766,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.train.get_checkpoint_state('checkpoints')"
@@ -758,7 +853,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.train.latest_checkpoint('checkpoints')"
@@ -767,7 +864,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = tf.train.latest_checkpoint('checkpoints')\n",
@@ -778,7 +877,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = 'checkpoints/i200_l512.ckpt'\n",
@@ -789,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = 'checkpoints/i600_l512.ckpt'\n",
@@ -800,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint = 'checkpoints/i1200_l512.ckpt'\n",
@@ -825,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
