--- a/RNN-lesson-04/embeddings/Skip-Gram_word2vec.ipynb
+++ b/RNN-lesson-04/embeddings/Skip-Gram_word2vec.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -78,10 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from urllib.request import urlretrieve\n",
@@ -127,11 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anarchism', 'originated', 'as', 'a', 'term', 'of', 'abuse', 'first', 'used', 'against', 'early', 'working', 'class', 'radicals', 'including', 'the', 'diggers', 'of', 'the', 'english', 'revolution', 'and', 'the', 'sans', 'culottes', 'of', 'the', 'french', 'revolution', 'whilst']\n"
+     ]
+    }
+   ],
    "source": [
     "words = utils.preprocess(text)\n",
     "print(words[:30])"
@@ -139,11 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 16680599\n",
+      "Unique words: 63641\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Total words: {}\".format(len(words)))\n",
     "print(\"Unique words: {}\".format(len(set(words))))"
@@ -158,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -187,14 +198,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before:  16680599 , after:  8389528\n"
+     ]
+    }
+   ],
    "source": [
     "## Your code here\n",
-    "train_words = # The final subsampled word list"
+    "from collections import Counter\n",
+    "import random\n",
+    "\n",
+    "def sub_sampling(i_w):\n",
+    "    # i_w: int_words\n",
+    "    threshold = 0.0001\n",
+    "    #cut_thresold = 0.90\n",
+    "    \n",
+    "    word_len = len(i_w)\n",
+    "    word_counts = Counter(i_w)\n",
+    "    freqs = {word: count/word_len for word, count in word_counts.items()}\n",
+    "    prob_to_discard = {word: 1.0 - np.sqrt(threshold/freqs[word]) for word in word_counts}\n",
+    "    sub_sampled = [word for word in int_words if prob_to_discard[word] < random.random()]\n",
+    "    \n",
+    "    print('before: ', word_len, ', after: ', len(sub_sampled))\n",
+    "    return sub_sampled\n",
+    "train_words = sub_sampling(int_words)"
    ]
   },
   {
@@ -219,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -228,9 +261,12 @@
     "def get_target(words, idx, window_size=5):\n",
     "    ''' Get a list of words in a window around an index. '''\n",
     "    \n",
-    "    # Your code here\n",
+    "    R = np.random.randint(1, window_size+1) # will return random number in range of [1, windows_size]\n",
+    "    start = idx - R if (idx - R) > 0 else 0\n",
+    "    stop = idx + R\n",
+    "    target_words = set(words[start:idx] + words[idx+1:stop+1])\n",
     "    \n",
-    "    return"
+    "    return list(target_words)"
    ]
   },
   {
@@ -242,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -296,8 +332,8 @@
    "source": [
     "train_graph = tf.Graph()\n",
     "with train_graph.as_default():\n",
-    "    inputs = \n",
-    "    labels = "
+    "    inputs = tf.placeholder(tf.int32, [None], name='inputs')\n",
+    "    labels = tf.placeholder(tf.int32, [None, None], name='labels')"
    ]
   },
   {
@@ -322,17 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "n_vocab = len(int_to_vocab)\n",
-    "n_embedding =  # Number of embedding features \n",
+    "n_embedding =  300 # Number of embedding features \n",
     "with train_graph.as_default():\n",
-    "    embedding = # create embedding weight matrix here\n",
-    "    embed = # use tf.nn.embedding_lookup to get the hidden layer output"
+    "    embedding = tf.Variable(tf.random_uniform((n_vocab, n_embedding), -1, 1)) # create embedding weight matrix here\n",
+    "    embed = tf.nn.embedding_lookup(embedding, inputs) # use tf.nn.embedding_lookup to get the hidden layer output"
    ]
   },
   {
@@ -354,20 +390,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of negative labels to sample\n",
     "n_sampled = 100\n",
     "with train_graph.as_default():\n",
-    "    softmax_w = # create softmax weight matrix here\n",
-    "    softmax_b = # create softmax biases here\n",
+    "    softmax_w = tf.Variable(tf.truncated_normal((n_vocab, n_embedding), stddev=0.1)) # create softmax weight matrix here\n",
+    "    softmax_b = tf.Variable(tf.zeros(n_vocab)) # create softmax biases here\n",
     "    \n",
     "    # Calculate the loss using negative sampling\n",
-    "    loss = tf.nn.sampled_softmax_loss \n",
+    "    loss = tf.nn.sampled_softmax_loss(softmax_w, softmax_b, \n",
+    "                                      labels, embed,\n",
+    "                                      n_sampled, n_vocab) \n",
     "    \n",
     "    cost = tf.reduce_mean(loss)\n",
     "    optimizer = tf.train.AdamOptimizer().minimize(cost)"
@@ -384,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -431,11 +467,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10 Iteration: 100 Avg. Training loss: 6.5487 0.6530 sec/batch\n",
+      "Epoch 1/10 Iteration: 200 Avg. Training loss: 6.4923 0.6226 sec/batch\n",
+      "Epoch 1/10 Iteration: 300 Avg. Training loss: 6.4349 0.5826 sec/batch\n",
+      "Epoch 1/10 Iteration: 400 Avg. Training loss: 6.4054 0.6025 sec/batch\n",
+      "Epoch 1/10 Iteration: 500 Avg. Training loss: 6.2676 0.5821 sec/batch\n",
+      "Epoch 1/10 Iteration: 600 Avg. Training loss: 6.0994 0.5869 sec/batch\n",
+      "Epoch 1/10 Iteration: 700 Avg. Training loss: 6.1099 0.6092 sec/batch\n",
+      "Epoch 1/10 Iteration: 800 Avg. Training loss: 5.8886 0.6141 sec/batch\n",
+      "Epoch 1/10 Iteration: 900 Avg. Training loss: 5.6993 0.5919 sec/batch\n",
+      "Epoch 1/10 Iteration: 1000 Avg. Training loss: 5.5897 0.5869 sec/batch\n",
+      "Nearest to time: comets, perform, achieved, ibuprofen, qualification, wilder, marched, age,\n",
+      "Nearest to there: remarkably, public, risk, buddhist, liberalize, epileptic, respect, using,\n",
+      "Nearest to some: gram, margaret, way, attested, makeup, created, sisyphus, cleansing,\n",
+      "Nearest to would: kto, gimbutas, sholes, b, desolation, immensely, brother, oxidation,\n",
+      "Nearest to used: founder, usually, domain, platt, regarded, quartermaster, wc, response,\n",
+      "Nearest to more: artwork, hab, horizon, sumbawa, math, mid, leontopithecus, next,\n",
+      "Nearest to s: shruti, insistence, identified, sarcastic, elizabeth, mulhouse, committee, muff,\n",
+      "Nearest to new: aragon, combine, wise, did, discharge, tats, churches, tankers,\n",
+      "Nearest to ocean: alike, uranium, arizona, landing, murbella, vaud, veto, arcas,\n",
+      "Nearest to account: tutankhamun, redirection, princess, hyderabad, system, diametrically, mim, atyrau,\n",
+      "Nearest to hold: narrowing, bioinformatics, providing, braille, too, dickinson, principal, natalia,\n",
+      "Nearest to proposed: heavily, abductions, artist, shoal, bay, parabellum, stressful, revolves,\n",
+      "Nearest to accepted: chickasaw, viterbo, matic, edirne, classic, issues, comdex, gz,\n",
+      "Nearest to writers: healing, hyper, nottinghamshire, vasily, mandamus, heston, wg, cloning,\n",
+      "Nearest to resources: devoted, riemannian, encapsulation, blogger, fife, counter, trask, frieze,\n",
+      "Nearest to animals: nascent, rainwater, wainwright, lessened, anzac, gdf, rainforest, ephraim,\n",
+      "Epoch 1/10 Iteration: 1100 Avg. Training loss: 5.4430 0.5930 sec/batch\n",
+      "Epoch 1/10 Iteration: 1200 Avg. Training loss: 5.3438 0.5837 sec/batch\n",
+      "Epoch 1/10 Iteration: 1300 Avg. Training loss: 5.2505 0.5822 sec/batch\n",
+      "Epoch 1/10 Iteration: 1400 Avg. Training loss: 5.2579 0.6101 sec/batch\n",
+      "Epoch 1/10 Iteration: 1500 Avg. Training loss: 5.1475 0.5813 sec/batch\n",
+      "Epoch 1/10 Iteration: 1600 Avg. Training loss: 5.0970 0.6208 sec/batch\n",
+      "Epoch 1/10 Iteration: 1700 Avg. Training loss: 5.0508 0.6233 sec/batch\n",
+      "Epoch 1/10 Iteration: 1800 Avg. Training loss: 5.0504 0.6137 sec/batch\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-b1d3869cd0d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m             feed = {inputs: x,\n\u001b[1;32m     19\u001b[0m                     labels: np.array(y)[:, None]}\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mtrain_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mloss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtrain_loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/tensorflow1.0/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    765\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    766\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 767\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    768\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    769\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/tensorflow1.0/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    963\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    964\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m--> 965\u001b[0;31m                              feed_dict_string, options, run_metadata)\n\u001b[0m\u001b[1;32m    966\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    967\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/tensorflow1.0/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1013\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1014\u001b[0m       return self._do_call(_run_fn, self._session, feed_dict, fetch_list,\n\u001b[0;32m-> 1015\u001b[0;31m                            target_list, options, run_metadata)\n\u001b[0m\u001b[1;32m   1016\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1017\u001b[0m       return self._do_call(_prun_fn, self._session, handle, feed_dict,\n",
+      "\u001b[0;32m/anaconda/envs/tensorflow1.0/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1020\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1021\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1022\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1023\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1024\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/tensorflow1.0/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1002\u001b[0m         return tf_session.TF_Run(session, options,\n\u001b[1;32m   1003\u001b[0m                                  \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1004\u001b[0;31m                                  status, run_metadata)\n\u001b[0m\u001b[1;32m   1005\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1006\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "epochs = 10\n",
     "batch_size = 1000\n",
@@ -579,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
