--- a/project-03/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/project-03/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# TV Script Generation\n",
     "In this project, you'll generate your own [Simpsons](https://en.wikipedia.org/wiki/The_Simpsons) TV scripts using RNNs.  You'll be using part of the [Simpsons dataset](https://www.kaggle.com/wcukierski/the-simpsons-by-the-data) of scripts from 27 seasons.  The Neural Network you'll build will generate a new TV script for a scene at [Moe's Tavern](https://simpsonswiki.com/wiki/Moe's_Tavern).\n",
@@ -16,11 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -36,10 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Explore the Data\n",
     "Play around with `view_sentence_range` to view different parts of the data."
@@ -48,14 +38,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "view_sentence_range = (0, 10)\n",
+    "view_sentence_range = (10, 20)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -81,10 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Implement Preprocessing Functions\n",
     "The first thing to do to any dataset is preprocessing.  Implement the following preprocessing functions below:\n",
@@ -102,15 +85,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
+    "from collections import Counter\n",
     "\n",
     "def create_lookup_tables(text):\n",
     "    \"\"\"\n",
@@ -119,7 +99,11 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    word_counts = Counter(text)\n",
+    "    sorted_vocab = sorted(word_counts, key=word_counts.get, reverse=True)\n",
+    "    int_to_vocab = {ii: word for ii , word in enumerate(sorted_vocab)}\n",
+    "    vocab_to_int = {word: ii for ii, word in int_to_vocab.items()}\n",
+    "    return vocab_to_int, int_to_vocab\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -130,10 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Tokenize Punctuation\n",
     "We'll be splitting the script into a word array using spaces as delimiters.  However, punctuations like periods and exclamation marks make it hard for the neural network to distinguish between the word \"bye\" and \"bye!\".\n",
@@ -156,11 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def token_lookup():\n",
@@ -169,7 +146,19 @@
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    token_dict = {\n",
+    "        '.': '||PERIOD||',\n",
+    "        ',': '||COMMA||',\n",
+    "        '\"': '||QUOTATION_MARK||',\n",
+    "        ';': '||SEMICOLON||',\n",
+    "        '!': '||EXCLAMATION_MARK||',\n",
+    "        '?': '||QUESTION_MARK||',\n",
+    "        '(': '||LEFT_PARENTHESES||',\n",
+    "        ')': '||RIGHT_PARENTHESES||',\n",
+    "        '--': '||DASH||',\n",
+    "        '\\n': '||RETURN||',\n",
+    "    }\n",
+    "    return token_dict\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -179,10 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Preprocess all the data and save it\n",
     "Running the code cell below will preprocess all the data and save it to file."
@@ -191,11 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -207,10 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Check Point\n",
     "This is your first checkpoint. If you ever decide to come back to this notebook or have to restart the notebook, you can start from here. The preprocessed data has been saved to disk."
@@ -219,11 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -238,10 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Build the Neural Network\n",
     "You'll build the components necessary to build a RNN by implementing the following functions below:\n",
@@ -258,9 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -297,11 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_inputs():\n",
@@ -310,7 +276,11 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    input = tf.placeholder( tf.int32, [None, None], name='input' )\n",
+    "    target = tf.placeholder( tf.int32, [None, None], name='target' )\n",
+    "    learning_rate = tf.placeholder( tf.float32, name='learning_rate' )\n",
+    "    # no dropout???\n",
+    "    return input, target, learning_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -321,10 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build RNN Cell and Initialize\n",
     "Stack one or more [`BasicLSTMCells`](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/BasicLSTMCell) in a [`MultiRNNCell`](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/MultiRNNCell).\n",
@@ -338,11 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
@@ -353,7 +316,17 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    # additional variable\n",
+    "    num_layers = 2\n",
+    "    \n",
+    "    # build lstm\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    \n",
+    "    # no dropout??\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * num_layers)\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
+    "    initial_state = tf.identity(initial_state, name='initial_state')\n",
+    "    return cell, initial_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -364,10 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Word Embedding\n",
     "Apply embedding to `input_data` using TensorFlow.  Return the embedded sequence."
@@ -376,11 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
@@ -392,7 +358,9 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
+    "    embed = tf.nn.embedding_lookup(embedding, input_data)\n",
+    "    return embed\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -403,10 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build RNN\n",
     "You created a RNN Cell in the `get_init_cell()` function.  Time to use the cell to create a RNN.\n",
@@ -419,11 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_rnn(cell, inputs):\n",
@@ -434,7 +395,9 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs=inputs, dtype=tf.float32)\n",
+    "    final_state = tf.identity(final_state, name='final_state')\n",
+    "    return outputs, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -445,10 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build the Neural Network\n",
     "Apply the functions you implemented above to:\n",
@@ -462,11 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size, embed_dim):\n",
@@ -480,7 +436,13 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    embed = get_embed(input_data, vocab_size, embed_dim)\n",
+    "    outputs, final_state = build_rnn(cell, embed)\n",
+    "    # activation_fn=None will create linear activation function\n",
+    "    # https://www.tensorflow.org/api_docs/python/tf/contrib/layers/fully_connected\n",
+    "    logits = tf.contrib.layers.fully_connected(outputs, num_outputs=vocab_size, activation_fn=None)\n",
+    "    \n",
+    "    return logits, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -491,10 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Batches\n",
     "Implement `get_batches` to create batches of input and targets using `int_text`.  The batches should be a Numpy array with the shape `(number of batches, 2, batch size, sequence length)`. Each batch contains two elements:\n",
@@ -538,11 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
@@ -554,7 +509,24 @@
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # clip last texts if neccessary\n",
+    "    n_batches = len(int_text) // (batch_size*seq_length)\n",
+    "    \n",
+    "    # rotate y_data with x_data\n",
+    "    x_data = np.array( int_text[: n_batches * batch_size * seq_length] )\n",
+    "    y_data = np.array( int_text[1: n_batches * batch_size * seq_length + 1] )\n",
+    "    # print('x: ', x_data.shape)\n",
+    "    # print('y: ', y_data.shape)\n",
+    "    x_data = x_data.reshape((batch_size, -1))\n",
+    "    y_data = y_data.reshape((batch_size, -1))\n",
+    "    \n",
+    "    # create each batches\n",
+    "    x_batches = np.split( x_data, n_batches, 1 )\n",
+    "    y_batches = np.split( y_data, n_batches, 1 )\n",
+    "    \n",
+    "    # configure last y value to first x value\n",
+    "    y_batches[-1][-1][-1] = x_batches[0][0][0]\n",
+    "    return np.array(list(zip(x_batches, y_batches)))\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -565,10 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Neural Network Training\n",
     "### Hyperparameters\n",
@@ -587,26 +556,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 100\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 128\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 256\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = None\n",
+    "embed_dim = 512\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 10\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.001\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 200\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -616,10 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build the Graph\n",
     "Build the graph using the neural network you implemented."
@@ -628,11 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -668,10 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Train\n",
     "Train the neural network on the preprocessed data.  If you have a hard time getting a good loss, check the [forms](https://discussions.udacity.com/) to see if anyone is having the same problem."
@@ -680,11 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -722,10 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Save Parameters\n",
     "Save `seq_length` and `save_dir` for generating a new TV script."
@@ -734,11 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -750,10 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Checkpoint"
    ]
@@ -761,11 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -782,10 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Implement Generate Functions\n",
     "### Get Tensors\n",
@@ -801,11 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_tensors(loaded_graph):\n",
@@ -826,10 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Choose Word\n",
     "Implement the `pick_word()` function to select the next word using `probabilities`."
@@ -838,11 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
@@ -864,10 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Generate TV Script\n",
     "This will generate the TV script for you.  Set `gen_length` to the length of TV script you want to generate."
@@ -876,11 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gen_length = 200\n",
@@ -931,10 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# The TV Script is Nonsensical\n",
     "It's ok if the TV script doesn't make any sense.  We trained on less than a megabyte of text.  In order to get good results, you'll have to use a smaller vocabulary or get more data.  Luckly there's more data!  As we mentioned in the begging of this project, this is a subset of [another dataset](https://www.kaggle.com/wcukierski/the-simpsons-by-the-data).  We didn't have you train on all the data, because that would take too long.  However, you are free to train your neural network on all the data.  After you complete the project, of course.\n",
@@ -959,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   },
   "widgets": {
    "state": {},
@@ -967,5 +882,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
